# step-by-step

./: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/api/: .env.example  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3312fc310644_add_specialty_and_topic_to_step_problem.py  4528061ea8ec_board_has_one_step_simplify_board_users.py  557539feb59c_initial.py  57f9cfb5529b_add_is_temp_to_user_and_import_record_.py  8bc6fca4dff8_add_created_by_to_groups.py  be920b7aff18_add_boards_and_board_step_users_tables.py  f7ab4370f444_remove_group_id_from_steps.py  xxxxxxxxxxxx_drop_group_step_progress.py
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/dependencies/: permissions.py
apps/api/app/routers/: admin.py  auth.py  board.py  group.py  group_import.py  group_progress.py  problem.py  solution.py  source.py  step.py
apps/api/app/services/: importer.py
apps/api/db/: session.py
apps/api/db/models/: __init__.py  board.py  group.py  group_step_progress.py  group_user.py  import_record.py  problem.py  step.py  (+4 more)
apps/api/schemas/: admin.py  board.py  group.py  group_progress.py  group_user.py  import_record.py  language.py  result.py  solution.py  source.py  step.py  user.py
apps/api/sources/: __init__.py  base.py
apps/api/steps/: POJ中级.json  POJ初级.json  POJ高级.json  steps.py  数据结构.json  程序设计基础一.json  程序设计基础二.json  算法设计与分析上.json  算法设计与分析下.json
apps/web/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/src/: App.vue  main.ts  vite-env.d.ts
(+23 files in other folders)
