[project]
name = "step-by-step"
version = "0.1.0"
description = "Step by step project"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = []
